RESOLVED FIXED101266
[EFL][WK2] Fix build warning in PageClientLegacyImpl.cpp
https://bugs.webkit.org/show_bug.cgi?id=101266
Summary [EFL][WK2] Fix build warning in PageClientLegacyImpl.cpp
KyungTae Kim
Reported 2012-11-05 15:14:09 PST
/home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/Source/WebKit2/UIProcess/efl/PageClientLegacyImpl.cpp:48:6: warning: unused parameter ‘size’ [-Wunused-parameter] The 'size' is not used when TILED_BACKING_STORE not used Use UNUSED_PARAM macro for removing -Wunused-parameter warning
Attachments
Patch (1.48 KB, patch)
2012-11-05 15:20 PST, KyungTae Kim
no flags
KyungTae Kim
Comment 1 2012-11-05 15:20:20 PST
Laszlo Gombos
Comment 2 2012-11-05 16:06:30 PST
Comment on attachment 172417 [details] Patch r=me.
WebKit Review Bot
Comment 3 2012-11-05 16:54:44 PST
Comment on attachment 172417 [details] Patch Clearing flags on attachment: 172417 Committed r133543: <http://trac.webkit.org/changeset/133543>
WebKit Review Bot
Comment 4 2012-11-05 16:54:48 PST
All reviewed patches have been landed. Closing bug.
Byungwoo Lee
Comment 5 2012-11-05 17:18:49 PST
*** Bug 101280 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.