[EFL][WK2] Fix build warning in PageClientLegacyImpl.cpp https://bugs.webkit.org/show_bug.cgi?id=101266

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-11-05
Reviewed by Laszlo Gombos.

The 'size' is not used when !USE(TILED_BACKING_STORE)
Use UNUSED_PARAM macro for removing -Wunused-parameter warning

* UIProcess/efl/PageClientLegacyImpl.cpp:
(WebKit::PageClientLegacyImpl::updateViewportSize):

Canonical link: https://commits.webkit.org/119361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133543 268f45cc-cd09-0410-ab3c-d52691b4dbfc