Source/WebKit2/UIProcess/efl/PageClientLegacyImpl.cpp
@@ -49,6 +49,8 @@ void PageClientLegacyImpl::updateViewportSize(const WebCore::IntSize& size)
 {
 #if USE(TILED_BACKING_STORE)
     m_viewImpl->page()->drawingArea()->setVisibleContentsRect(IntRect(m_viewImpl->scrollPosition(), size), m_viewImpl->scaleFactor(), FloatPoint());
+#else
+    UNUSED_PARAM(size);
 #endif
 }
 
